Fix menu on mobile

--- a/app/styles/framework.less
+++ b/app/styles/framework.less
@@ -41,6 +41,11 @@
     }
 
     &__navigation {
+        &--toggled {
+            @media (max-width: @size-s) {
+                height: 56px;
+            }
+        }
     }
 
     &__page {
