--- a/app/styles/navigation.less
+++ b/app/styles/navigation.less
@@ -13,6 +13,15 @@
         padding: 20px 40px;
     }
 
+    &--toggled {
+        @media (max-width: @size-s) {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 2;
+        }
+    }
+
     &__logo {
         height: 32px;
         margin-right: 30px;
@@ -110,7 +119,7 @@
     }
 
     &__item {
-        margin-bottom: 10px;
+        margin-bottom: 20px;
         text-align: center;
 
         @media (min-width: @size-s) {
@@ -121,7 +130,7 @@
 
     &__link {
         color: @black;
-        font-size: 1.1rem;
+        font-size: 1.3rem;
         outline: 0;
         position: relative;
         text-decoration: none;
@@ -132,6 +141,10 @@
         &:focus,
         &:hover {
             color: @burgundy;
+        }
+
+        @media (min-width: @size-s) {
+            font-size: 1.1rem;
         }
     }
 }
